TS-3235: fix crash problem caused by sync problem in PluginVC. This closes #164.